--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                 <h4>Imagen 5</h4>
             </div>
         </div>
+        <aside>
+            <p>redes sociales</p>
+        </aside>
+        <footer>
+            <p>&copy; 2020 Mopetscuritiba</p>
+            <p>Contactos</p>
+        </footer>
     </center>
     <script src="./funciones/funciones.js"></script>
 </body>
