--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.cdnfonts.com/css/austie-bost-kitten-klub" rel="stylesheet">
     <link rel="stylesheet" href="./estilos/estilos.css">
     <title>mopetscuritiba</title>
 </head>
@@ -17,29 +20,47 @@
         <h2>Bienvenido a nuestro sitio!</h2>
         <h3 id="subt"></h3>
         <div class="contenedor">
-            <div class="contenedor__item">
-                <img src="./recursos/imagen/imagen1.jpg" alt="" class="imagen">
-                <h4>Imagen 1</h4>
+            <div>
+                <div class="contenedor__item">
+                    <img src="./recursos/imagen/productos/prod1.png" alt="" class="imagen">
+                </div>
+                <button class="precio">precio: $500</button>
             </div>
-            <div class="contenedor__item">
-                <img src="./recursos/imagen/imagen2.jpg" alt="" class="imagen">
-                <h4>Imagen 2</h4>
+
+            <div>
+                <div class="contenedor__item">
+                    <img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen">
+                </div>
+                <button class="btn btn-success">precio: $500</button>
             </div>
-            <div class="contenedor__item">
-                <img src="./recursos/imagen/imagen3.jpg" alt="" class="imagen">
-                <h4>Imagen 3</h4>
+
+            <div>
+                <div class="contenedor__item">
+                    <img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen">
+                </div>
+                <button class="btn btn-success">precio: $500</button>
             </div>
-            <div class="contenedor__item">
-                <img src="./recursos/imagen/imagen4.jpg" alt="" class="imagen">
-                <h4>Imagen 4</h4>
+
+            <div>
+                <div class="contenedor__item">
+                    <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen">
+                </div>
+                <button class="btn btn-success">precio: $500</button>
             </div>
-            <div class="contenedor__item">
-                <img src="./recursos/imagen/imagen5.jpg" alt="" class="imagen">
-                <h4>Imagen 5</h4>
+
+            <div>
+                <div class="contenedor__item">
+                    <img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen">
+                </div>
+                <button class="btn btn-success">precio: $500</button>
             </div>
+
         </div>
+        <br>
         <aside>
-            <p>redes sociales</p>
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-whatsapp"></i>
         </aside>
         <footer>
             <p>&copy; 2020 Mopetscuritiba</p>
@@ -47,5 +68,6 @@
         </footer>
     </center>
     <script src="./funciones/funciones.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
