--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./recursos/imagen/shortcut.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.cdnfonts.com/css/austie-bost-kitten-klub" rel="stylesheet">
@@ -19,6 +20,9 @@
         <h1>MOPETSCURITIBA</h1>
         <h2>Bienvenido a nuestro sitio!</h2>
         <h3 id="subt"></h3>
+        <div class="texto">
+            <p>Productos hechos a medida para cada simpático amiguito. Fabricados con materiales de primera y cien por ciento a mano. Productos totalmente artesanales que preservan el medio ambiente y hechos para aquellos que saben escoger precio y una alta calidad.</p>
+        </div>
         <div class="contenedor">
             <div>
                 <div class="contenedor__item">
@@ -31,28 +35,28 @@
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen">
                 </div>
-                <button class="btn btn-success">precio: $500</button>
+                <button class="precio">precio: $500</button>
             </div>
 
             <div>
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen">
                 </div>
-                <button class="btn btn-success">precio: $500</button>
+                <button class="precio">precio: $500</button>
             </div>
 
             <div>
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen">
                 </div>
-                <button class="btn btn-success">precio: $500</button>
+                <button class="precio">precio: $500</button>
             </div>
 
             <div>
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen">
                 </div>
-                <button class="btn btn-success">precio: $500</button>
+                <button class="precio">precio: $500</button>
             </div>
 
         </div>
@@ -62,6 +66,12 @@
             <i class="bi bi-instagram"></i>
             <i class="bi bi-whatsapp"></i>
         </aside>
+        <div class="ir_a_formulario">
+            <p>necesita productos hechos a medida para su mascota? no hay problema, toque el botón para solicitar su presupuesto.</p>
+            <button id="plataforma">Ir</button>
+        </div>
+        <br>
+        <hr>
         <footer>
             <p>&copy; 2020 Mopetscuritiba</p>
             <p>Contactos</p>
