--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="./recursos/imagen/shortcut.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hint.css/2.7.0/hint.min.css">
     <link href="https://fonts.cdnfonts.com/css/austie-bost-kitten-klub" rel="stylesheet">
     <link rel="stylesheet" href="./estilos/estilos.css">
     <title>mopetscuritiba</title>
@@ -23,40 +24,48 @@
         <div class="texto">
             <p>Productos hechos a medida para cada simpático amiguito. Fabricados con materiales de primera y cien por ciento a mano. Productos totalmente artesanales que preservan el medio ambiente y hechos para aquellos que saben escoger precio y una alta calidad.</p>
         </div>
+        <!-- Modal reutilizable -->
+        <div class="overlay" id="overlay"></div>
+        <div class="modal" id="modal">
+            <button class="close" id="closeModal">X</button>
+            <h2 id="modalTitle">Título del producto</h2>
+            <p id="modalDescription">Descripción del producto</p>
+        </div>
         <div class="contenedor">
             <div>
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod1.png" alt="" class="imagen">
                 </div>
-                <button class="precio">precio: $500</button>
+                <button class="desc" data-title="Producto 1" data-description="Este es el producto 1, una solución inteligente para tu hogar.">descripción</button>
             </div>
 
             <div>
+                <!--<h2 class="hint--top hint--warning text-warning brillar" data-hint="Si realmente eres profesor, deberías tener la clave secreta">?</h2>-->
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen">
                 </div>
-                <button class="precio">precio: $500</button>
+                <button class="desc" data-title="Producto 2" data-description="Este es el producto 2 con características asombrosas.">descripción</button>
             </div>
 
             <div>
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen">
                 </div>
-                <button class="precio">precio: $500</button>
+                <button class="desc" data-title="Producto 23" data-description="Este es el producto 3, tiene gran calidad y durabilidad.">Descripción</button>
             </div>
 
             <div>
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen">
                 </div>
-                <button class="precio">precio: $500</button>
+                <button class="desc" data-title="Producto 4" data-description="Producto 4: Diseño elegante y funcionalidad moderna.">Descripción</button>
             </div>
 
             <div>
                 <div class="contenedor__item">
                     <img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen">
                 </div>
-                <button class="precio">precio: $500</button>
+                <button class="desc" data-title="Producto 5" data-description="Producto 5: Otro producto diferente con características únicas.">Descripción</button>
             </div>
 
         </div>
@@ -67,7 +76,7 @@
             <i class="bi bi-whatsapp"></i>
         </aside>
         <div class="ir_a_formulario">
-            <p>necesita productos hechos a medida para su mascota? no hay problema, toque el botón para solicitar su presupuesto.</p>
+            <p>Necesita productos hechos a medida para su mascota? no hay problema, toque el botón para solicitar su presupuesto.</p>
             <button id="plataforma">Ir</button>
         </div>
         <br>
