--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hint.css/2.7.0/hint.min.css">
     <link href="https://fonts.cdnfonts.com/css/austie-bost-kitten-klub" rel="stylesheet">
     <link rel="stylesheet" href="./estilos/estilos.css">
-    <title>mopetscuritiba</title>
+    <title>Mopetscuritiba</title>
 </head>
 <body>
     <center>
@@ -32,42 +32,41 @@
             <p id="modalDescription">Descripción del producto</p>
         </div>
         <div class="contenedor">
-            <div>
-                <div class="contenedor__item">
-                    <img src="./recursos/imagen/productos/prod1.png" alt="" class="imagen">
-                </div>
-                <button class="desc" data-title="Producto 1" data-description="Este es el producto 1, una solución inteligente para tu hogar.">descripción</button>
+            <div class="contenedor__item">
+                <a href="./recursos/paginas/seccion_bebederos.html"><span class="hint--top" aria-label="ir a la sección BEBEDEROS"><img src="./recursos/imagen/productos/prod1.png" alt="" class="imagen"></span></a>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección bebederos -.-</p>
+                <button class="desc" data-title="Producto 1" data-description="Este es el producto 1, una solución inteligente para tu hogar.">Descripción</button>
             </div>
 
-            <div>
-                <!--<h2 class="hint--top hint--warning text-warning brillar" data-hint="Si realmente eres profesor, deberías tener la clave secreta">?</h2>-->
-                <div class="contenedor__item">
-                    <img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen">
-                </div>
-                <button class="desc" data-title="Producto 2" data-description="Este es el producto 2 con características asombrosas.">descripción</button>
+            <div class="contenedor__item">
+                <a href="./recursos/paginas/seccion_casitas.html"><span class="hint--top" aria-label="ir a la sección CASITAS"><img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen"></span></a>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección casitas -.-</p>
+                <button class="desc" data-title="Producto 2" data-description="Este es el producto 2 con características asombrosas.">Descripción</button>
             </div>
 
-            <div>
-                <div class="contenedor__item">
-                    <img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen">
-                </div>
-                <button class="desc" data-title="Producto 23" data-description="Este es el producto 3, tiene gran calidad y durabilidad.">Descripción</button>
+            <div class="contenedor__item">
+                <a href="./recursos/paginas/seccion_escaleras.html"><span class="hint--top" aria-label="ir a la sección ESCALERAS"><img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen"></span></a>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección escaleras -.-</p>
+                <button class="desc" data-title="Producto 3" data-description="Este es el producto 3, tiene gran calidad y durabilidad.">Descripción</button>
             </div>
 
-            <div>
-                <div class="contenedor__item">
-                    <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen">
-                </div>
+            <div class="contenedor__item">
+                <a href="./recursos/paginas/seccion_rascadores.html"><span class="hint--top" aria-label="ir a la sección RASCADORES"><img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen"></span></a>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección rascadores -.-</p>
                 <button class="desc" data-title="Producto 4" data-description="Producto 4: Diseño elegante y funcionalidad moderna.">Descripción</button>
             </div>
 
-            <div>
-                <div class="contenedor__item">
-                    <img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen">
-                </div>
+            <div class="contenedor__item">
+                <a href="./recursos/paginas/seccion_ropa.html"><span class="hint--top" aria-label="ir a la sección ROPITAS"><img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen"></span></a>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección ropitas -.-</p>
                 <button class="desc" data-title="Producto 5" data-description="Producto 5: Otro producto diferente con características únicas.">Descripción</button>
             </div>
 
+            <div class="contenedor__item">
+                <a href="./recursos/paginas/seccion_zapatos.html"><span class="hint--top" aria-label="ir a la sección ZAPATITOS"><img src="./recursos/imagen/productos/prod6.png" alt="" class="imagen"></span></a>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección zapatitos -.-</p>
+                <button class="desc" data-title="Producto 6" data-description="Producto 6: Otro producto diferente con características únicas.">Descripción</button>
+            </div>
         </div>
         <br>
         <aside>
