--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Bienvenido a nuestro sitio!</h2>
         <h3 id="subt"></h3>
         <div class="texto">
-            <p>Productos hechos a medida para cada simpático amiguito. Fabricados con materiales de primera y cien por ciento a mano. Productos totalmente artesanales que preservan el medio ambiente y hechos para aquellos que saben escoger precio y una alta calidad.</p>
+            <h5>Productos hechos a medida para cada simpático amiguito. Fabricados con materiales de primera y cien por ciento a mano. Productos totalmente artesanales que preservan el medio ambiente y hechos para aquellos que saben escoger precio y una alta calidad.</h5>
         </div>
         <!-- Modal reutilizable -->
         <div class="overlay" id="overlay"></div>
@@ -35,48 +35,48 @@
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_bebederos.html"><span class="hint--top" aria-label="ir a la sección BEBEDEROS"><img src="./recursos/imagen/productos/prod1.png" alt="" class="imagen"></span></a>
-                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección bebederos -.-</p>
                 </div>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección bebederos -.-</p>
                 <button class="desc" data-title="Producto 1" data-description="Este es el producto 1, una solución inteligente para tu hogar.">Descripción</button>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_casitas.html"><span class="hint--top" aria-label="ir a la sección CASITAS"><img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen"></span></a>
-                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección casitas -.-</p>
                 </div>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección casitas -.-</p>
                 <button class="desc" data-title="Producto 2" data-description="Este es el producto 2 con características asombrosas.">Descripción</button>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_escaleras.html"><span class="hint--top" aria-label="ir a la sección ESCALERAS"><img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen"></span></a>
-                    <p>Este producto contiene información detallada, y si tocas, vas a la sección escaleras -.-</p>
                 </div>
+                <p>Este producto contiene información detallada, y si tocas, vas a la sección escaleras -.-</p>
                 <button class="desc" data-title="Producto 3" data-description="Este es el producto 3, tiene gran calidad y durabilidad.">Descripción</button>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/sección_rascadores.html"><span class="hint--top" aria-label="ir a la sección RASCADORES"><img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen"></span></a>
-                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección rascadores -.-</p>    
                 </div>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección rascadores -.-</p>    
                 <button class="desc" data-title="Producto 4" data-description="Producto 4: Diseño elegante y funcionalidad moderna.">Descripción</button>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_ropa.html"><span class="hint--top" aria-label="ir a la sección ROPITAS"><img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen"></span></a>
-                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección ropitas -.-</p>    
                 </div>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección ropitas -.-</p>    
                 <button class="desc" data-title="Producto 5" data-description="Producto 5: Otro producto diferente con características únicas.">Descripción</button>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_zapatos.html"><span class="hint--top" aria-label="ir a la sección ZAPATITOS"><img src="./recursos/imagen/productos/prod6.png" alt="" class="imagen"></span></a>
-                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección zapatitos -.-</p>
                 </div>
+                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección zapatitos -.-</p>
                 <button class="desc" data-title="Producto 6" data-description="Producto 6: Otro producto diferente con características únicas.">Descripción</button>
             </div>
         </div>
@@ -87,7 +87,7 @@
             <i class="bi bi-whatsapp"></i>
         </aside>
         <div class="ir_a_formulario">
-            <p>Necesita productos hechos a medida para su mascota? no hay problema, toque el botón para solicitar su presupuesto.</p>
+            <h5>Necesita productos hechos a medida para su mascota? no hay problema, toque el botón para solicitar su presupuesto.</h5>
             <button id="plataforma">Ir</button>
         </div>
         <br>
