--- a/recursos/paginas/plataforma.html
+++ b/recursos/paginas/plataforma.html
@@ -24,6 +24,12 @@
             <input type="number" placeholder="peso (de la mascota)">
         </form>
         <button id="volver">Volver</button>
+        <br>
+        <hr>
+        <footer>
+            <p>&copy; 2020 Mopetscuritiba</p>
+            <p>Contactos</p>
+        </footer>
     </center>
     <script src="../../funciones/funciones.js"></script>
 </body>
