--- a/recursos/paginas/sección_rascadores.html
+++ b/recursos/paginas/sección_rascadores.html
@@ -20,6 +20,12 @@
         <h1>Próximamente</h1>
         <h2>Rascadores</h2>
         <button id="volver">Volver</button>
+        <br>
+        <hr>
+        <footer>
+            <p>&copy; 2020 Mopetscuritiba</p>
+            <p>Contactos</p>
+        </footer>
     </center>
     <script src="../../funciones/funciones.js"></script>
 </body>
