--- a/index.html
+++ b/index.html
@@ -36,48 +36,60 @@
                 <div>
                     <a href="./recursos/paginas/seccion_bebederos.html"><span class="hint--top" aria-label="ir a la sección BEBEDEROS"><img src="./recursos/imagen/productos/prod1.png" alt="" class="imagen"></span></a>
                 </div>
-                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección bebederos -.-</p>
-                <button class="desc" data-title="Producto 1" data-description="Este es el producto 1, una solución inteligente para tu hogar.">Descripción</button>
+                <div class="descripcion">
+                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección bebederos -.-</p>
+                    <button class="desc" data-title="Producto 1" data-description="Este es el producto 1, una solución inteligente para tu hogar.">Descripción</button>
+                </div>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_casitas.html"><span class="hint--top" aria-label="ir a la sección CASITAS"><img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen"></span></a>
                 </div>
-                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección casitas -.-</p>
-                <button class="desc" data-title="Producto 2" data-description="Este es el producto 2 con características asombrosas.">Descripción</button>
+                <div class="descripcion">
+                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección casitas -.-</p>
+                    <button class="desc" data-title="Producto 2" data-description="Este es el producto 2 con características asombrosas.">Descripción</button>
+                </div>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_escaleras.html"><span class="hint--top" aria-label="ir a la sección ESCALERAS"><img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen"></span></a>
                 </div>
-                <p>Este producto contiene información detallada, y si tocas, vas a la sección escaleras -.-</p>
-                <button class="desc" data-title="Producto 3" data-description="Este es el producto 3, tiene gran calidad y durabilidad.">Descripción</button>
+                <div class="descripcion">
+                    <p>Este producto contiene información detallada, y si tocas, vas a la sección escaleras -.-</p>
+                    <button class="desc" data-title="Producto 3" data-description="Este es el producto 3, tiene gran calidad y durabilidad.">Descripción</button>
+                </div>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/sección_rascadores.html"><span class="hint--top" aria-label="ir a la sección RASCADORES"><img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen"></span></a>
                 </div>
-                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección rascadores -.-</p>    
-                <button class="desc" data-title="Producto 4" data-description="Producto 4: Diseño elegante y funcionalidad moderna.">Descripción</button>
+                <div class="descripcion">
+                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección rascadores -.-</p>    
+                    <button class="desc" data-title="Producto 4" data-description="Producto 4: Diseño elegante y funcionalidad moderna.">Descripción</button>
+                </div>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_ropa.html"><span class="hint--top" aria-label="ir a la sección ROPITAS"><img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen"></span></a>
                 </div>
-                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección ropitas -.-</p>    
-                <button class="desc" data-title="Producto 5" data-description="Producto 5: Otro producto diferente con características únicas.">Descripción</button>
+                <div class="descripcion">
+                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección ropitas -.-</p>    
+                    <button class="desc" data-title="Producto 5" data-description="Producto 5: Otro producto diferente con características únicas.">Descripción</button>
+                </div>
             </div>
 
             <div class="contenedor__item">
                 <div>
                     <a href="./recursos/paginas/seccion_zapatos.html"><span class="hint--top" aria-label="ir a la sección ZAPATITOS"><img src="./recursos/imagen/productos/prod6.png" alt="" class="imagen"></span></a>
                 </div>
-                <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección zapatitos -.-</p>
-                <button class="desc" data-title="Producto 6" data-description="Producto 6: Otro producto diferente con características únicas.">Descripción</button>
+                <div class="descripcion">
+                    <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección zapatitos -.-</p>
+                    <button class="desc" data-title="Producto 6" data-description="Producto 6: Otro producto diferente con características únicas.">Descripción</button>
+                </div>
             </div>
         </div>
         <br>
