--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <button class="desc" data-title="Producto 1" data-description="Este es el producto 1, una solución inteligente para tu hogar.">Descripción</button>
                 </div>
             </div>
+            <hr>
 
             <div class="contenedor__item">
                 <div>
@@ -51,6 +52,7 @@
                     <button class="desc" data-title="Producto 2" data-description="Este es el producto 2 con características asombrosas.">Descripción</button>
                 </div>
             </div>
+            <hr>
 
             <div class="contenedor__item">
                 <div>
@@ -61,6 +63,7 @@
                     <button class="desc" data-title="Producto 3" data-description="Este es el producto 3, tiene gran calidad y durabilidad.">Descripción</button>
                 </div>
             </div>
+            <hr>
 
             <div class="contenedor__item">
                 <div>
@@ -71,6 +74,7 @@
                     <button class="desc" data-title="Producto 4" data-description="Producto 4: Diseño elegante y funcionalidad moderna.">Descripción</button>
                 </div>
             </div>
+            <hr>
 
             <div class="contenedor__item">
                 <div>
@@ -81,6 +85,7 @@
                     <button class="desc" data-title="Producto 5" data-description="Producto 5: Otro producto diferente con características únicas.">Descripción</button>
                 </div>
             </div>
+            <hr>
 
             <div class="contenedor__item">
                 <div>
@@ -91,12 +96,13 @@
                     <button class="desc" data-title="Producto 6" data-description="Producto 6: Otro producto diferente con características únicas.">Descripción</button>
                 </div>
             </div>
+            <hr>
         </div>
         <br>
         <aside>
             <i class="bi bi-facebook"></i>
             <i class="bi bi-instagram"></i>
-            <i class="bi bi-whatsapp"></i>
+            <a target="_blank" href="https://wa.me/+554197153863?text=Hola,%20estoy%20interesado%20en%20contactarte."><i class="bi bi-whatsapp"></i>
         </aside>
         <div class="ir_a_formulario">
             <h5>Necesita productos hechos a medida para su mascota? no hay problema, toque el botón para solicitar su presupuesto.</h5>
