adding images to side

--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
             <p id="modalDescription">Descripción del producto</p>
         </div>
         <div class="contenedor">
+            <img src="./recursos/imagen/dog2.svg" alt="" class="aside">
+            <img src="./recursos/imagen/cat1.svg" alt="" class="aside_right">
             <div class="contenedor__item">
                 <div>
-                    <a href="./recursos/paginas/seccion_bebederos.html"><span class="hint--top" aria-label="ir a la sección BEBEDEROS"><img src="./recursos/imagen/productos/prod1.png" alt="" class="imagen"></span></a>
+                    <a href="./recursos/paginas/seccion_bebederos.html">
+                        <span class="hint--top" aria-label="ir a la sección BEBEDEROS">
+                            <img src="./recursos/imagen/productos/prod1.png" alt="" class="imagen">
+                            <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen2">
+                        </span>
+                    </a>
                 </div>
                 <div class="descripcion">
                     <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección bebederos -.-</p>
@@ -45,7 +52,12 @@
 
             <div class="contenedor__item">
                 <div>
-                    <a href="./recursos/paginas/seccion_casitas.html"><span class="hint--top" aria-label="ir a la sección CASITAS"><img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen"></span></a>
+                    <a href="./recursos/paginas/seccion_casitas.html">
+                        <span class="hint--top" aria-label="ir a la sección CASITAS">
+                            <img src="./recursos/imagen/productos/prod2.png" alt="" class="imagen">
+                            <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen2">
+                        </span>
+                    </a>
                 </div>
                 <div class="descripcion">
                     <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección casitas -.-</p>
@@ -56,7 +68,12 @@
 
             <div class="contenedor__item">
                 <div>
-                    <a href="./recursos/paginas/seccion_escaleras.html"><span class="hint--top" aria-label="ir a la sección ESCALERAS"><img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen"></span></a>
+                    <a href="./recursos/paginas/seccion_escaleras.html">
+                        <span class="hint--top" aria-label="ir a la sección ESCALERAS">
+                            <img src="./recursos/imagen/productos/prod3.png" alt="" class="imagen">
+                            <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen2">
+                        </span>
+                    </a>
                 </div>
                 <div class="descripcion">
                     <p>Este producto contiene información detallada, y si tocas, vas a la sección escaleras -.-</p>
@@ -67,7 +84,12 @@
 
             <div class="contenedor__item">
                 <div>
-                    <a href="./recursos/paginas/sección_rascadores.html"><span class="hint--top" aria-label="ir a la sección RASCADORES"><img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen"></span></a>
+                    <a href="./recursos/paginas/sección_rascadores.html">
+                        <span class="hint--top" aria-label="ir a la sección RASCADORES">
+                            <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen">
+                            <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen2">
+                        </span>
+                    </a>
                 </div>
                 <div class="descripcion">
                     <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección rascadores -.-</p>    
@@ -78,7 +100,12 @@
 
             <div class="contenedor__item">
                 <div>
-                    <a href="./recursos/paginas/seccion_ropa.html"><span class="hint--top" aria-label="ir a la sección ROPITAS"><img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen"></span></a>
+                    <a href="./recursos/paginas/seccion_ropa.html">
+                        <span class="hint--top" aria-label="ir a la sección ROPITAS">
+                            <img src="./recursos/imagen/productos/prod5.png" alt="" class="imagen">
+                            <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen2">
+                        </span>
+                    </a>
                 </div>
                 <div class="descripcion">
                     <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección ropitas -.-</p>    
@@ -89,7 +116,12 @@
 
             <div class="contenedor__item">
                 <div>
-                    <a href="./recursos/paginas/seccion_zapatos.html"><span class="hint--top" aria-label="ir a la sección ZAPATITOS"><img src="./recursos/imagen/productos/prod6.png" alt="" class="imagen"></span></a>
+                    <a href="./recursos/paginas/seccion_zapatos.html">
+                        <span class="hint--top" aria-label="ir a la sección ZAPATITOS">
+                            <img src="./recursos/imagen/productos/prod6.png" alt="" class="imagen">
+                            <img src="./recursos/imagen/productos/prod4.png" alt="" class="imagen2">
+                        </span>
+                    </a>
                 </div>
                 <div class="descripcion">
                     <p>Este producto contiene información detallada presonando el botón, y si tocas, vas a la sección zapatitos -.-</p>
