--- a/prueba.html
+++ b/prueba.html
@@ -1,169 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal Reutilizable</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: 20px;
-            padding: 20px;
-            background-color: #f4f4f9;
-            margin: 0;
-        }
-
-        .contenedor__item {
-            width: 150px;
-            height: 200px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            overflow: hidden;
-            background-color: #fff;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .contenedor__item img {
-            width: 100%;
-            height: auto;
-        }
-
-        .desc {
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 10px;
-        }
-
-        /* Estilos del modal */
-        .modal {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-            z-index: 20;
-            width: 300px;
-            display: none;
-        }
-
-        .modal.open {
-            display: block;
-        }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 10;
-            display: none;
-        }
-
-        .overlay.open {
-            display: block;
-        }
-
-        .close {
-            background-color: #e74c3c;
-            color: #fff;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 5px;
-            cursor: pointer;
-            float: right;
-        }
-
-    </style>
-</head>
-<body>
-
-    <!-- Productos -->
-    <div class="contenedor__item">
-        <img src="prod1.png" alt="Producto 1">
-        <button class="desc" data-title="Producto 1" data-description="Este es el producto 1 con características asombrosas.">Descripción</button>
-    </div>
-
-    <div class="contenedor__item">
-        <img src="prod2.png" alt="Producto 2">
-        <button class="desc" data-title="Producto 2" data-description="Este es el producto 2, tiene gran calidad y durabilidad.">Descripción</button>
-    </div>
-
-    <div class="contenedor__item">
-        <img src="prod3.png" alt="Producto 3">
-        <button class="desc" data-title="Producto 3" data-description="Producto 3: Diseño elegante y funcionalidad moderna.">Descripción</button>
-    </div>
-
-    <div class="contenedor__item">
-        <img src="prod4.png" alt="Producto 4">
-        <button class="desc" data-title="Producto 4" data-description="Este es el producto 4, una solución inteligente para tu hogar.">Descripción</button>
-    </div>
-
-    <!-- Modal reutilizable -->
-    <div class="overlay" id="overlay"></div>
-    <div class="modal" id="modal">
-        <button class="close" id="closeModal">X</button>
-        <h2 id="modalTitle">Título del producto</h2>
-        <p id="modalDescription">Descripción del producto</p>
-    </div>
-
-    <script>
-        // Variables globales
-        const openModalBtns = document.querySelectorAll('.desc'); // Todos los botones de descripción
-        const closeModalBtn = document.getElementById('closeModal'); // Botón para cerrar el modal
-        const modal = document.getElementById('modal'); // Modal
-        const overlay = document.getElementById('overlay'); // Fondo oscuro
-        const modalTitle = document.getElementById('modalTitle'); // Título dinámico
-        const modalDescription = document.getElementById('modalDescription'); // Descripción dinámica
-
-        // Abrir el modal y cambiar su contenido dinámicamente
-        openModalBtns.forEach(button => {
-            button.addEventListener('click', () => {
-                const productTitle = button.getAttribute('data-title'); // Toma el título del producto
-                const productDescription = button.getAttribute('data-description'); // Toma la descripción del producto
-                
-                // Cambia el contenido del modal
-                modalTitle.textContent = productTitle;
-                modalDescription.textContent = productDescription;
-
-                // Muestra el modal y la superposición
-                modal.classList.add('open');
-                overlay.classList.add('open');
-            });
-        });
-
-        // Cerrar el modal
-        closeModalBtn.addEventListener('click', () => {
-            modal.classList.remove('open');
-            overlay.classList.remove('open');
-        });
-
-        // Cerrar modal si se hace clic en la superposición
-        overlay.addEventListener('click', () => {
-            modal.classList.remove('open');
-            overlay.classList.remove('open');
-        });
-    </script>
-
-</body>
-</html>
+HOLA
