--- a/recursos/paginas/plataforma.html
+++ b/recursos/paginas/plataforma.html
@@ -24,6 +24,7 @@
             <input type="number" placeholder="peso (de la mascota)">
         </form>
         <button id="volver">Volver</button>
+        <div></div>
         <br>
         <hr>
         <footer>
