--- a/recursos/paginas/seccion_bebederos.html
+++ b/recursos/paginas/seccion_bebederos.html
@@ -20,6 +20,7 @@
         <h1>Próximamente</h1>
         <h2>Bebederos</h2>
         <button id="volver">Volver</button>
+        <div></div>
         <br>
         <hr>
         <footer>
