--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
         <aside>
             <i class="bi bi-facebook"></i>
             <i class="bi bi-instagram"></i>
-            <a target="_blank" href="https://wa.me/+554197153863?text=Hola,%20estoy%20interesado%20en%20contactarte."><i class="bi bi-whatsapp"></i>
+            <a target="_blank" href="https://wa.me/+554197153863?text=Hola,%20estoy%20interesado%20en%20contactarte."><i class="bi bi-whatsapp"></i></a>
         </aside>
         <div class="ir_a_formulario">
             <h5>Necesita productos hechos a medida para su mascota? no hay problema, toque el botón para solicitar su presupuesto.</h5>
-            <button id="plataforma">Ir</button>
+            <button id="plataforma">Presupuesto</button>
         </div>
         <br>
         <hr>
