--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         <footer>
             <p>&copy; 2020 Mopetscuritiba</p>
             <p>Contactos</p>
+            <a href="./recursos/plantillas/album/index.html">Plantilla 1</a>
         </footer>
     </center>
     <script src="./funciones/funciones.js"></script>
