adding more templates

--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
             <p>&copy; 2020 Mopetscuritiba</p>
             <p>Contactos</p>
             <a href="./recursos/plantillas/album/index.html">Plantilla 1</a>
+            <a href="./recursos/plantillas/carousel/index.html">Plantilla 2</a>
+            <a href="./recursos/plantillas/features/index.html">Plantilla 3</a>
+            <a href="./recursos/plantillas/pricing/index.html">Plantilla 4</a>
+            <a href="./recursos/plantillas/product/index.html">Plantilla 5</a>
         </footer>
     </center>
     <script src="./funciones/funciones.js"></script>
