adding prod one

--- a/recursos/plantillas/carousel/index.html
+++ b/recursos/plantillas/carousel/index.html
@@ -224,23 +224,23 @@
   	    			<div class="col-lg-4">
 						<div><img src="../../imagen/chuchu.jpg" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
   	    	  			<!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
-  	    	  			<h2 class="fw-normal">Heading</h2>
-  	    	  			<p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-  	    	  			<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+  	    	  			<h2 class="fw-normal">Chuchú</h2>
+  	    	  			<p>Una página bien fina en la que vendo cositas.</p>
+  	    	  			<p><a class="btn btn-secondary" href="#">Ver detalles &raquo;</a></p>
   	    			</div><!-- /.col-lg-4 -->
   	    			<div class="col-lg-4">
 						<div><img src="../../imagen/monga.jpg" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
   	    				<!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
-  	    				<h2 class="fw-normal">Heading</h2>
-  	    				<p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-  	    				<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+  	    				<h2 class="fw-normal">Freddy</h2>
+  	    				<p>Una vez me hizo una cesta con periódico y duermo bien fino ahí.</p>
+  	    				<p><a class="btn btn-secondary" href="#">Ver detalles &raquo;</a></p>
   	    			</div><!-- /.col-lg-4 -->
   	    			<div class="col-lg-4">
 						<div><img src="../../imagen/pic.png" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
   	    				<!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
-  	    				<h2 class="fw-normal">Heading</h2>
-  	    				<p>And lastly this, the third column of representative placeholder content.</p>
-  	    				<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+  	    				<h2 class="fw-normal">El firix</h2>
+  	    				<p>Vamos a ver cómo queda esta página.</p>
+  	    				<p><a class="btn btn-secondary" href="#">Ver detalles &raquo;</a></p>
   	    			</div><!-- /.col-lg-4 -->
   	  			</div><!-- /.row -->
   	  			<!-- START THE FEATURETTES -->
@@ -251,7 +251,7 @@
   	  					<p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
   	  			  	</div>
   	  			  	<div class="col-md-5">
-						<img src="../../imagen/productos/prod1.png" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<a href="./vistas/product_1.html"><img src="../../imagen/productos/prod1.png" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
 					</div>
   	  			</div>
