moviendo el trasero

--- a/vistas/galeria.html
+++ b/vistas/galeria.html
@@ -64,7 +64,7 @@
 		<header data-bs-theme="dark">
   			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     			<div class="container-fluid">
-      				<a class="navbar-brand" href="#"><div><img src="../../../imagen/logo.jpg" alt="logo" class="logo"> MopetsCuritiba</div></a>
+      				<a class="navbar-brand" href="../index.html"><div><img src="../../../imagen/logo.jpg" alt="logo" class="logo"> MopetsCuritiba</div></a>
       				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         				<span class="navbar-toggler-icon"></span>
       				</button>
@@ -80,10 +80,10 @@
         						<a class="nav-link disabled" aria-disabled="true">Disabled</a>
         					</li>
         				</ul>
-        				<form class="d-flex" role="search">
+        				<!--<form class="d-flex" role="search">
         					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         					<button class="btn btn-outline-success" type="submit">Search</button>
-        				</form>
+        				</form>-->
       				</div>
     			</div>
   			</nav>
@@ -92,57 +92,66 @@
 		
 		<main>
 			<center>
-            	<h1>PRODUCTO 1</h1>
-            	<h2 class="text-center">Descripción detallada del producto</h2>
+            	<h1>Galería</h1>
             	<div class="container">
             	    <div class="container-item">
             	        <div>
-            	            <img src="../../../imagen/cat1.svg" alt="">
+            	            <img src="../imagen/productos/casita_1.jpg" alt="">
             	        </div>
-            	        <p>Descripción detallada del producto</p>
             	    </div>
             	    <div class="container-item">
             	        <div>
-            	            <img src="../../../imagen/cat1.svg" alt="">
+            	            <img src="../imagen/productos/casita_2.jpg" alt="">
             	        </div>
-            	        <p>Descripción detallada del producto</p>
             	    </div>
             	    <div class="container-item">
             	        <div>
-            	            <img src="../../../imagen/cat1.svg" alt="">
+            	            <img src="../imagen/productos/comida_1.jpg" alt="">
             	        </div>
-            	        <p>Descripción detallada del producto</p>
             	    </div>
             	    <div class="container-item">
             	        <div>
-            	            <img src="../../../imagen/cat1.svg" alt="">
+            	            <img src="../imagen/productos/comida_2.jpg" alt="">
             	        </div>
-            	        <p>Descripción detallada del producto</p>
+            	    </div>
+                    <div class="container-item">
+            	        <div>
+            	            <img src="../imagen/productos/escalera_1.jpg" alt="">
+            	        </div>
+            	    </div>
+                    <div class="container-item">
+            	        <div>
+            	            <img src="../imagen/productos/escalera_10.jpg" alt="">
+            	        </div>
+            	    </div>
+                    <div class="container-item">
+            	        <div>
+            	            <img src="../imagen/productos/escalera_13.jpg" alt="">
+            	        </div>
+            	    </div>
+                    <div class="container-item">
+            	        <div>
+            	            <img src="../imagen/productos/hab_1.jpg" alt="">
+            	        </div>
+            	    </div>
+                    <div class="container-item">
+            	        <div>
+            	            <img src="../imagen/productos/hab_2.jpg" alt="">
+            	        </div>
+            	    </div>
+                    <div class="container-item">
+            	        <div>
+            	            <img src="../imagen/productos/hab_3.jpg" alt="">
+            	        </div>
             	    </div>
             	</div>
 				<div class="navbar-brand">
-					<div class="calculadora" id="calculadora">
-						<h2>Producto a medida</h2>
-						<label for="altura">Altura</label>
-						<input type="number" id="alto" name="alto" placeholder="ingrese altura" value="">
-						<label for="ancho">Ancho</label>
-						<input type="number" id="ancho" name="ancho" placeholder="ingrese ancho" value="">
-						<label for="largo">Largo</label>
-						<input type="number" id="largo" name="largo" placeholder="ingrese largo" value="">
-						<hr>
-						<button type="button" id="enviar">Enviar</button>
-						<hr>
-						<div class="resultado">
-							<h4 id="resultado"></h4>
-						</div>
-					</div>
 
 				</div>
 			</center>
   			<!-- FOOTER -->
-  			<footer class="container">
+  			<footer class="text-center">
   				<a class="btn btn-warning" href="#">Ir arriba</a>
-                <br>
                 <a class="btn btn-warning" href="../index.html">volver</a>
   				<p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   			</footer>
