--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
 			}
     	</style>
 
-    
     	<!-- Custom styles for this template -->
     	<link href="./estilos/carousel.css" rel="stylesheet">
   	</head>
@@ -152,10 +151,10 @@
         						<a class="nav-link disabled" aria-disabled="true">Disabled</a>
         					</li>
         				</ul>
-        				<form class="d-flex" role="search">
+        				<!--<form class="d-flex" role="search">
         					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         					<button class="btn btn-outline-success" type="submit">Search</button>
-        				</form>
+        				</form>-->
       				</div>
     			</div>
   			</nav>
@@ -170,35 +169,35 @@
   	  			</div>
   	  			<div class="carousel-inner">
   	    			<div class="carousel-item active">
-						<img src="../../imagen/fondo.png" alt="carrusel_1" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<img src="./imagen/productos/comida_5.jpg" alt="carrusel_1" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
   	    		  		<!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
   	    		  		<div class="container">
   	    		    		<div class="carousel-caption text-start">
   	    		      			<h1>Example headline.</h1>
   	    		      			<p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-  	    		      			<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+  	    		      			<p><a class="btn btn-lg btn-primary" href="./vistas/seccion_bebederos.html">Ver este producto</a></p>
   	    		    		</div>
   	    		  		</div>
   	    			</div>
   	    			<div class="carousel-item">
-						<img src="../../imagen/fondo2.webp" alt="carrusel_2" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<img src="./imagen/productos/comida_3.jpg" alt="carrusel_2" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
   	    				<!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
   	    				<div class="container">
   	    					<div class="carousel-caption">
   	    						<h1>Another example headline.</h1>
-  	    						<p>Some representative placeholder content for the second slide of the carousel.</p>
-  	    						<p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+  	    						<p>¿Necesitas un producto exclusivo y personalizado para tu mascota? No pierdas más tiempo, solicítalo ya.</p>
+  	    						<p><a class="btn btn-lg btn-primary" href="./vistas/plataforma.html">Solicita ahora</a></p>
   	    					</div>
   	    				</div>
   	    			</div>
   	    			<div class="carousel-item">
-						<img src="../../imagen/fondo3.jpg" alt="carrusel_3" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<img src="./imagen/fondo2.webp" alt="carrusel_3" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
   	    		  		<!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
   	    		  		<div class="container">
   	    		    		<div class="carousel-caption text-end">
-  	    		      			<h1>One more for good measure.</h1>
-  	    		      			<p>Some representative placeholder content for the third slide of this carousel.</p>
-  	    		      			<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+  	    		      			<h1 class="text-dark">One more for good measure.</h1>
+  	    		      			<p class="text-dark">Some representative placeholder content for the third slide of this carousel.</p>
+  	    		      			<p><a class="btn btn-lg btn-primary" href="./vistas/galeria.html">Mira la galería</a></p>
   	    		    		</div>
   	    		  		</div>
   	    			</div>
@@ -247,33 +246,34 @@
 				<hr class="featurette-divider">
   	  			<div class="row featurette">
   	  			  	<div class="col-md-7">
-  	  					<h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-  	  					<p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+  	  					<h2 class="featurette-heading fw-normal lh-1">Escaleras hechas a medida. <span class="text-body-secondary">Lo mejor para tu mascota.</span></h2>
+  	  					<p class="lead">Imagina a tu mascota subiendo por estas escaleras con una sonrisa de oreja a oreja, a menos que sea una iguana, entonces no.</p>
+						<p class="lead">Toca la imagen para que veas más modelos.</p>
   	  			  	</div>
   	  			  	<div class="col-md-5">
-						<a href="./vistas/product_1.html"><img src="../../imagen/productos/prod1.png" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
+						<a href="./vistas/seccion_escaleras.html"><img src="./imagen/productos/escalera_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
 					</div>
   	  			</div>
   	  			<hr class="featurette-divider">
   	  			<div class="row featurette">
   	  				<div class="col-md-7 order-md-2">
-  	  					<h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-  	  					<p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+  	  					<h2 class="featurette-heading fw-normal lh-1">Casitas muy bonitas. <span class="text-body-secondary">Tu iguana ninja se sentirá como en casa.</span></h2>
+  	  					<p class="lead">Las iguanas deben estar en un ambiente adecuado, preferiblemente en los árboles, no las encierres. Gil.</p>
   	  				</div>
   	  				<div class="col-md-5 order-md-1">
-						<img src="../../imagen/productos/prod2.png" alt="prod_2" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<a href="./vistas/seccion_casitas.html"><img src="./imagen/productos/casita_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
   	  				</div>
   	  			</div>
   	  			<hr class="featurette-divider">
   	  			<div class="row featurette">
   	  				<div class="col-md-7">
-  	  					<h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-  	  					<p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+  	  					<h2 class="featurette-heading fw-normal lh-1">Y por último, esto. <span class="text-body-secondary">Mira lo maravilloso que es.</span></h2>
+  	  					<p class="lead">Y sí, cuando tengas esto en tu casa, querrás, sin duda alguna, dos más.</p>
   	  				</div>
   	  				<div class="col-md-5">
-						<img src="../../imagen/productos/prod3.png" alt="prod_3" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
+						<a href="./vistas/sección_rascadores.html"><img src="./imagen/productos/wadafac_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
   	  				</div>
   	  			</div>
